@@ -54,8 +54,46 @@ namespace Castle.Windsor
 		/// Creates and adds an <see cref="IFacility"/> facility to the container.
 		/// </summary>
 		/// <typeparam name="T">The facility type.</typeparam>
+		/// <param name="key"></param>
+		/// <param name="onCreate">The callback for creation.</param>
+		/// <returns></returns>
+		IWindsorContainer AddFacility<T>(String key, Action<T> onCreate)
+			where T : IFacility, new();
+
+		/// <summary>
+		/// Creates and adds an <see cref="IFacility"/> facility to the container.
+		/// </summary>
+		/// <typeparam name="T">The facility type.</typeparam>
+		/// <param name="key"></param>
+		/// <param name="onCreate">The callback for creation.</param>
+		/// <returns></returns>
+		IWindsorContainer AddFacility<T>(String key, Func<T, object> onCreate)
+			where T : IFacility, new();
+
+		/// <summary>
+		/// Creates and adds an <see cref="IFacility"/> facility to the container.
+		/// </summary>
+		/// <typeparam name="T">The facility type.</typeparam>
 		/// <returns></returns>
 		IWindsorContainer AddFacility<T>() where T : IFacility, new();
+
+		/// <summary>
+		/// Creates and adds an <see cref="IFacility"/> facility to the container.
+		/// </summary>
+		/// <typeparam name="T">The facility type.</typeparam>
+		/// <param name="onCreate">The callback for creation.</param>
+		/// <returns></returns>
+		IWindsorContainer AddFacility<T>(Action<T> onCreate) 
+			where T : IFacility, new();
+
+		/// <summary>
+		/// Creates and adds an <see cref="IFacility"/> facility to the container.
+		/// </summary>
+		/// <typeparam name="T">The facility type.</typeparam>
+		/// <param name="onCreate">The callback for creation.</param>
+		/// <returns></returns>
+		IWindsorContainer AddFacility<T>(Func<T, object> onCreate)
+			where T : IFacility, new();
 
 		/// <summary>
 		/// Adds a component to be managed by the container
