@@ -1,6 +1,8 @@
 RC 4
 ====
 
+- Added additional AddFacility overrides to improve fluent configuration of facilities.
+
 - Moved DefaultComponentActivator check for abstract so it can be better overriden.
   
 - Added Attribute to Component Registration fluent interface.
